--- a/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/ProjectDetail.cshtml
@@ -94,6 +94,8 @@
                                  <!---->
                                  <div class="row">
                                     <div class="col-md-12">
+                                    @if(Model.Evidences.Count > 0)
+                                    {
                                         <table class="table table-hover table-striped tbimpact">
                                               <thead>
                                                  <tr style="background-color: #235b4e;">
@@ -142,6 +144,12 @@
 
                                               </tbody>
                                           </table>
+                                    }
+                                    else
+                                    {
+                                       <div class="text-center"><i>No se encontraron datos</i></div>
+                                    }
+                                        
                                     </div>
                                  </div>
                                  <!---->
@@ -154,6 +162,8 @@
                                              </p>
                                           </div>
                                           <div class="col-md-12">
+                                              @if(Model.Incidents.Count > 0)
+                                            {
                                               <table class="table table-hover table-striped">
                                                 <thead>
                                                    <tr style="background-color: #235b4e;">
@@ -216,6 +226,12 @@
                                                      
                                                 </tbody>
                                              </table>
+                                            }
+                                            else
+                                            {
+                                                 <div class="text-center"><i>No se encontraron datos</i></div>
+                                            }
+                                              
                                           </div>
                                         </div>
                                     </div>
