--- a/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
+++ b/PMCTool.App/Views/FactSheet/A/_ParcialIndex.cshtml
@@ -114,7 +114,7 @@
                                        <div class="row">
                                           <div class="col-md-12">
                                              <p class="title-section">
-                                                <b>Tiempo</b>
+                                                <b>Detalla de etapa</b>
                                              </p>
                                           </div>
                                        </div>
@@ -141,7 +141,22 @@
                                                                                var styleStatus ="";
                                                                                 @switch (@rowx.status)
                                                                                 {
-                                                                                  case 1: 
+                                                                                    case 4:
+                                                                                        <td class="table-success">
+                                                                                         <i class="fas fa-check" style="color:white"></i>
+                                                                                        </td>
+                                                                                        break;
+                                                                                      case 2:  case 3:   case 1:
+                                                                                        <td class="table-danger"> 
+                                                                                            <i class="fas fa-times" style="color:white"></i>
+                                                                                        </td>
+                                                                                        break; 
+                                                                                      case 5:  
+                                                                                        <td class="table-danger" style="background: #000000;">
+                                                                                            <i class="fas fa-ban" style="color:white"></i>
+                                                                                        </td>
+                                                                                        break;
+                                                                                 @* case 1: 
                                                                                         <td class="table-success">
                                                                                          <i class="fas fa-check" style="color:white"></i>
                                                                                         </td>
@@ -165,7 +180,7 @@
                                                                                         <td class="table-danger" style="background: #000000;">
                                                                                             <i class="fas fa-check" style="color:white"></i>
                                                                                         </td>
-                                                                                        break;
+                                                                                        break;*@
                                                                                 }
                                                                           }
                                                                           <td class="table-success">
@@ -215,7 +230,7 @@
                                                    </td>
                                                 </tr>
                                                 <tr>
-                                                   <td>
+                                                   <td style="padding-left: 9px;">
                                                       <h6 class="h5-responsive"><b>Indirectos</b></h6>
                                                    </td>
                                                    <td>
