--- a/PMCTool.App/Views/ProjectsLocations/Index.cshtml
+++ b/PMCTool.App/Views/ProjectsLocations/Index.cshtml
@@ -47,11 +47,11 @@
                                     </div>
                                     <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
                                         <select multiple name="Inversion" id="Inversion" class="selectpicker" data-title="Inversión" data-style="btn-default btn-outline" data-menu-style="dropdown-blue" data-live-search="true" data-actions-box="true">
-                                            <option value="PEF">PEF</option>
+                                            <option value="FEDERAL">Federal</option>
                                             <option value="FONADIN">FONADIN</option>
-                                            <option value="FONADIN">FONDEN</option>
-                                            <option value="FONADIN">ESTATAL</option>
-                                            <option value="FONADIN">PRIVADA</option>
+                                            <option value="FONDEN">FONDEN</option>
+                                            <option value="ESTATAL">Estatal</option>
+                                            <option value="PRIVADA">Privada</option>
                                         </select>
                                     </div>
                                     <div class="col-12 col-sm-4 col-md-4 col-lg-4 col-xl-4">
